JumpScript/tests/baselines/reference/Protected2.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected2.jump(1,1): error TS1044: 'protected' modifier cannot appear on a module or namespace element.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected2.jump (1 errors) ====
    protected module M {
    ~~~~~~~~~
!!! error TS1044: 'protected' modifier cannot appear on a module or namespace element.
    }